ocaml/grammar.output
   0  $accept : %entry% $end

   1  program : stmtlist EOF

   2  stmtlist : revstmtlist

   3  revstmtlist : revstmtlist stmt
   4              |

   5  stmt : JMP expr attrs semi
   6       | CJMP expr COMMA expr COMMA expr attrs semi
   7       | SPECIAL STRING attrs semi
   8       | lval ASSIGN expr attrs semi
   9       | lval EQUAL expr attrs semi
  10       | HALT expr attrs semi
  11       | ASSERT expr attrs semi
  12       | ASSUME expr attrs semi
  13       | LABEL ID attrs
  14       | ADDR INT attrs
  15       | COMMENT attrs

  16  plusminusint : INT
  17               | MINUS INT

  18  taint : plusminusint

  19  usage : ID

  20  context : STRING EQUAL INT COMMA taint COMMA typ COMMA usage

  21  attrs :
  22        | attr attrs

  23  attr : AT ID STRING
  24       | AT ID context

  25  lval : ID opttyp

  26  opttyp :
  27         | COLON typ

  28  typ : styp
  29      | QUESTION styp
  30      | styp QUESTION styp

  31  styp : ID

  32  letstart : LET ID COLON typ ASSIGN expr

  33  expr : LPAREN expr RPAREN
  34       | expr PLUS expr
  35       | expr MINUS expr
  36       | expr TIMES expr
  37       | expr DIVIDE expr
  38       | expr SDIVIDE expr
  39       | expr MOD expr
  40       | expr SMOD expr
  41       | expr LSHIFT expr
  42       | expr RSHIFT expr
  43       | expr ARSHIFT expr
  44       | expr AND expr
  45       | expr OR expr
  46       | expr XOR expr
  47       | expr EQUALEQUAL expr
  48       | expr NEQ expr
  49       | expr LT expr
  50       | expr LE expr
  51       | expr SLT expr
  52       | expr SLE expr
  53       | expr GT expr
  54       | expr GE expr
  55       | expr SGT expr
  56       | expr SGE expr
  57       | NOT expr
  58       | MINUS expr
  59       | UNKNOWN STRING COLON typ
  60       | STRING
  61       | lval
  62       | IF expr THEN expr ELSE expr
  63       | letstart IN expr
  64       | EXTRACT COLON INT COLON INT COLON LSQUARE expr RSQUARE
  65       | CONCAT COLON LSQUARE expr RSQUARE LSQUARE expr RSQUARE
  66       | ID COLON typ LPAREN expr RPAREN
  67       | TRUE
  68       | FALSE
  69       | INT COLON typ
  70       | expr WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr
  71       | expr LSQUARE expr COMMA endian RSQUARE COLON typ

  72  endian : EBIG
  73         | ELITTLE
  74         | expr

  75  semi : SEMI
  76       |

  77  assign : ASSIGN
  78         | EQUAL

  79  %entry% : '\001' program
  80          | '\002' expr

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . program  (79)
	revstmtlist : .  (4)

	.  reduce 4

	program  goto 4
	stmtlist  goto 5
	revstmtlist  goto 6


state 2
	%entry% : '\002' . expr  (80)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 20
	lval  goto 21
	letstart  goto 22


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	%entry% : '\001' program .  (79)

	.  reduce 79


state 5
	program : stmtlist . EOF  (1)

	EOF  shift 23
	.  error


state 6
	stmtlist : revstmtlist .  (2)
	revstmtlist : revstmtlist . stmt  (3)

	ID  shift 24
	COMMENT  shift 25
	CJMP  shift 26
	JMP  shift 27
	LABEL  shift 28
	ADDR  shift 29
	ASSERT  shift 30
	ASSUME  shift 31
	HALT  shift 32
	SPECIAL  shift 33
	EOF  reduce 2

	stmt  goto 34
	lval  goto 35


state 7
	lval : ID . opttyp  (25)
	expr : ID . COLON typ LPAREN expr RPAREN  (66)
	opttyp : .  (26)

	COLON  shift 36
	$end  reduce 26
	ID  reduce 26
	COMMENT  reduce 26
	RPAREN  reduce 26
	LSQUARE  reduce 26
	RSQUARE  reduce 26
	COMMA  reduce 26
	SEMI  reduce 26
	EOF  reduce 26
	CJMP  reduce 26
	JMP  reduce 26
	LABEL  reduce 26
	ADDR  reduce 26
	ASSERT  reduce 26
	ASSUME  reduce 26
	HALT  reduce 26
	SPECIAL  reduce 26
	IN  reduce 26
	WITH  reduce 26
	THEN  reduce 26
	ELSE  reduce 26
	PLUS  reduce 26
	MINUS  reduce 26
	DIVIDE  reduce 26
	MOD  reduce 26
	SMOD  reduce 26
	TIMES  reduce 26
	SDIVIDE  reduce 26
	LSHIFT  reduce 26
	RSHIFT  reduce 26
	ARSHIFT  reduce 26
	XOR  reduce 26
	NEQ  reduce 26
	SLT  reduce 26
	SLE  reduce 26
	AND  reduce 26
	OR  reduce 26
	EQUALEQUAL  reduce 26
	LT  reduce 26
	LE  reduce 26
	GT  reduce 26
	GE  reduce 26
	SGT  reduce 26
	SGE  reduce 26
	AT  reduce 26

	opttyp  goto 37


state 8
	expr : INT . COLON typ  (69)

	COLON  shift 38
	.  error


state 9
	expr : STRING .  (60)

	.  reduce 60


state 10
	expr : LPAREN . expr RPAREN  (33)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 39
	lval  goto 21
	letstart  goto 22


state 11
	letstart : LET . ID COLON typ ASSIGN expr  (32)

	ID  shift 40
	.  error


state 12
	expr : UNKNOWN . STRING COLON typ  (59)

	STRING  shift 41
	.  error


state 13
	expr : TRUE .  (67)

	.  reduce 67


state 14
	expr : FALSE .  (68)

	.  reduce 68


state 15
	expr : IF . expr THEN expr ELSE expr  (62)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 42
	lval  goto 21
	letstart  goto 22


state 16
	expr : MINUS . expr  (58)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 43
	lval  goto 21
	letstart  goto 22


state 17
	expr : CONCAT . COLON LSQUARE expr RSQUARE LSQUARE expr RSQUARE  (65)

	COLON  shift 44
	.  error


state 18
	expr : EXTRACT . COLON INT COLON INT COLON LSQUARE expr RSQUARE  (64)

	COLON  shift 45
	.  error


state 19
	expr : NOT . expr  (57)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 46
	lval  goto 21
	letstart  goto 22


state 20
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . SDIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . SMOD expr  (40)
	expr : expr . LSHIFT expr  (41)
	expr : expr . RSHIFT expr  (42)
	expr : expr . ARSHIFT expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : expr . XOR expr  (46)
	expr : expr . EQUALEQUAL expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LE expr  (50)
	expr : expr . SLT expr  (51)
	expr : expr . SLE expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GE expr  (54)
	expr : expr . SGT expr  (55)
	expr : expr . SGE expr  (56)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (70)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (71)
	%entry% : '\002' expr .  (80)

	LSQUARE  shift 47
	WITH  shift 48
	PLUS  shift 49
	MINUS  shift 50
	DIVIDE  shift 51
	MOD  shift 52
	SMOD  shift 53
	TIMES  shift 54
	SDIVIDE  shift 55
	LSHIFT  shift 56
	RSHIFT  shift 57
	ARSHIFT  shift 58
	XOR  shift 59
	NEQ  shift 60
	SLT  shift 61
	SLE  shift 62
	AND  shift 63
	OR  shift 64
	EQUALEQUAL  shift 65
	LT  shift 66
	LE  shift 67
	GT  shift 68
	GE  shift 69
	SGT  shift 70
	SGE  shift 71
	$end  reduce 80


state 21
	expr : lval .  (61)

	.  reduce 61


state 22
	expr : letstart . IN expr  (63)

	IN  shift 72
	.  error


state 23
	program : stmtlist EOF .  (1)

	.  reduce 1


state 24
	lval : ID . opttyp  (25)
	opttyp : .  (26)

	COLON  shift 73
	EQUAL  reduce 26
	ASSIGN  reduce 26

	opttyp  goto 37


state 25
	stmt : COMMENT . attrs  (15)
	attrs : .  (21)

	AT  shift 74
	ID  reduce 21
	COMMENT  reduce 21
	EOF  reduce 21
	CJMP  reduce 21
	JMP  reduce 21
	LABEL  reduce 21
	ADDR  reduce 21
	ASSERT  reduce 21
	ASSUME  reduce 21
	HALT  reduce 21
	SPECIAL  reduce 21

	attrs  goto 75
	attr  goto 76


state 26
	stmt : CJMP . expr COMMA expr COMMA expr attrs semi  (6)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 77
	lval  goto 21
	letstart  goto 22


state 27
	stmt : JMP . expr attrs semi  (5)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 78
	lval  goto 21
	letstart  goto 22


state 28
	stmt : LABEL . ID attrs  (13)

	ID  shift 79
	.  error


state 29
	stmt : ADDR . INT attrs  (14)

	INT  shift 80
	.  error


state 30
	stmt : ASSERT . expr attrs semi  (11)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 81
	lval  goto 21
	letstart  goto 22


state 31
	stmt : ASSUME . expr attrs semi  (12)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 82
	lval  goto 21
	letstart  goto 22


state 32
	stmt : HALT . expr attrs semi  (10)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 83
	lval  goto 21
	letstart  goto 22


state 33
	stmt : SPECIAL . STRING attrs semi  (7)

	STRING  shift 84
	.  error


state 34
	revstmtlist : revstmtlist stmt .  (3)

	.  reduce 3


state 35
	stmt : lval . ASSIGN expr attrs semi  (8)
	stmt : lval . EQUAL expr attrs semi  (9)

	EQUAL  shift 85
	ASSIGN  shift 86
	.  error


state 36
	opttyp : COLON . typ  (27)
	expr : ID COLON . typ LPAREN expr RPAREN  (66)

	ID  shift 87
	QUESTION  shift 88
	.  error

	typ  goto 89
	styp  goto 90


state 37
	lval : ID opttyp .  (25)

	.  reduce 25


state 38
	expr : INT COLON . typ  (69)

	ID  shift 87
	QUESTION  shift 88
	.  error

	typ  goto 91
	styp  goto 90


state 39
	expr : LPAREN expr . RPAREN  (33)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . SDIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . SMOD expr  (40)
	expr : expr . LSHIFT expr  (41)
	expr : expr . RSHIFT expr  (42)
	expr : expr . ARSHIFT expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : expr . XOR expr  (46)
	expr : expr . EQUALEQUAL expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LE expr  (50)
	expr : expr . SLT expr  (51)
	expr : expr . SLE expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GE expr  (54)
	expr : expr . SGT expr  (55)
	expr : expr . SGE expr  (56)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (70)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (71)

	RPAREN  shift 92
	LSQUARE  shift 47
	WITH  shift 48
	PLUS  shift 49
	MINUS  shift 50
	DIVIDE  shift 51
	MOD  shift 52
	SMOD  shift 53
	TIMES  shift 54
	SDIVIDE  shift 55
	LSHIFT  shift 56
	RSHIFT  shift 57
	ARSHIFT  shift 58
	XOR  shift 59
	NEQ  shift 60
	SLT  shift 61
	SLE  shift 62
	AND  shift 63
	OR  shift 64
	EQUALEQUAL  shift 65
	LT  shift 66
	LE  shift 67
	GT  shift 68
	GE  shift 69
	SGT  shift 70
	SGE  shift 71
	.  error


state 40
	letstart : LET ID . COLON typ ASSIGN expr  (32)

	COLON  shift 93
	.  error


state 41
	expr : UNKNOWN STRING . COLON typ  (59)

	COLON  shift 94
	.  error


state 42
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . SDIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . SMOD expr  (40)
	expr : expr . LSHIFT expr  (41)
	expr : expr . RSHIFT expr  (42)
	expr : expr . ARSHIFT expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : expr . XOR expr  (46)
	expr : expr . EQUALEQUAL expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LE expr  (50)
	expr : expr . SLT expr  (51)
	expr : expr . SLE expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GE expr  (54)
	expr : expr . SGT expr  (55)
	expr : expr . SGE expr  (56)
	expr : IF expr . THEN expr ELSE expr  (62)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (70)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (71)

	LSQUARE  shift 47
	WITH  shift 48
	THEN  shift 95
	PLUS  shift 49
	MINUS  shift 50
	DIVIDE  shift 51
	MOD  shift 52
	SMOD  shift 53
	TIMES  shift 54
	SDIVIDE  shift 55
	LSHIFT  shift 56
	RSHIFT  shift 57
	ARSHIFT  shift 58
	XOR  shift 59
	NEQ  shift 60
	SLT  shift 61
	SLE  shift 62
	AND  shift 63
	OR  shift 64
	EQUALEQUAL  shift 65
	LT  shift 66
	LE  shift 67
	GT  shift 68
	GE  shift 69
	SGT  shift 70
	SGE  shift 71
	.  error


state 43
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . SDIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . SMOD expr  (40)
	expr : expr . LSHIFT expr  (41)
	expr : expr . RSHIFT expr  (42)
	expr : expr . ARSHIFT expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : expr . XOR expr  (46)
	expr : expr . EQUALEQUAL expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LE expr  (50)
	expr : expr . SLT expr  (51)
	expr : expr . SLE expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GE expr  (54)
	expr : expr . SGT expr  (55)
	expr : expr . SGE expr  (56)
	expr : MINUS expr .  (58)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (70)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (71)

	LSQUARE  shift 47
	$end  reduce 58
	ID  reduce 58
	COMMENT  reduce 58
	RPAREN  reduce 58
	RSQUARE  reduce 58
	COMMA  reduce 58
	SEMI  reduce 58
	EOF  reduce 58
	CJMP  reduce 58
	JMP  reduce 58
	LABEL  reduce 58
	ADDR  reduce 58
	ASSERT  reduce 58
	ASSUME  reduce 58
	HALT  reduce 58
	SPECIAL  reduce 58
	IN  reduce 58
	WITH  reduce 58
	THEN  reduce 58
	ELSE  reduce 58
	PLUS  reduce 58
	MINUS  reduce 58
	DIVIDE  reduce 58
	MOD  reduce 58
	SMOD  reduce 58
	TIMES  reduce 58
	SDIVIDE  reduce 58
	LSHIFT  reduce 58
	RSHIFT  reduce 58
	ARSHIFT  reduce 58
	XOR  reduce 58
	NEQ  reduce 58
	SLT  reduce 58
	SLE  reduce 58
	AND  reduce 58
	OR  reduce 58
	EQUALEQUAL  reduce 58
	LT  reduce 58
	LE  reduce 58
	GT  reduce 58
	GE  reduce 58
	SGT  reduce 58
	SGE  reduce 58
	AT  reduce 58


state 44
	expr : CONCAT COLON . LSQUARE expr RSQUARE LSQUARE expr RSQUARE  (65)

	LSQUARE  shift 96
	.  error


state 45
	expr : EXTRACT COLON . INT COLON INT COLON LSQUARE expr RSQUARE  (64)

	INT  shift 97
	.  error


state 46
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . SDIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . SMOD expr  (40)
	expr : expr . LSHIFT expr  (41)
	expr : expr . RSHIFT expr  (42)
	expr : expr . ARSHIFT expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : expr . XOR expr  (46)
	expr : expr . EQUALEQUAL expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LE expr  (50)
	expr : expr . SLT expr  (51)
	expr : expr . SLE expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GE expr  (54)
	expr : expr . SGT expr  (55)
	expr : expr . SGE expr  (56)
	expr : NOT expr .  (57)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (70)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (71)

	LSQUARE  shift 47
	$end  reduce 57
	ID  reduce 57
	COMMENT  reduce 57
	RPAREN  reduce 57
	RSQUARE  reduce 57
	COMMA  reduce 57
	SEMI  reduce 57
	EOF  reduce 57
	CJMP  reduce 57
	JMP  reduce 57
	LABEL  reduce 57
	ADDR  reduce 57
	ASSERT  reduce 57
	ASSUME  reduce 57
	HALT  reduce 57
	SPECIAL  reduce 57
	IN  reduce 57
	WITH  reduce 57
	THEN  reduce 57
	ELSE  reduce 57
	PLUS  reduce 57
	MINUS  reduce 57
	DIVIDE  reduce 57
	MOD  reduce 57
	SMOD  reduce 57
	TIMES  reduce 57
	SDIVIDE  reduce 57
	LSHIFT  reduce 57
	RSHIFT  reduce 57
	ARSHIFT  reduce 57
	XOR  reduce 57
	NEQ  reduce 57
	SLT  reduce 57
	SLE  reduce 57
	AND  reduce 57
	OR  reduce 57
	EQUALEQUAL  reduce 57
	LT  reduce 57
	LE  reduce 57
	GT  reduce 57
	GE  reduce 57
	SGT  reduce 57
	SGE  reduce 57
	AT  reduce 57


state 47
	expr : expr LSQUARE . expr COMMA endian RSQUARE COLON typ  (71)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 98
	lval  goto 21
	letstart  goto 22


state 48
	expr : expr WITH . LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (70)

	LSQUARE  shift 99
	.  error


state 49
	expr : expr PLUS . expr  (34)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 100
	lval  goto 21
	letstart  goto 22


state 50
	expr : expr MINUS . expr  (35)
